sort.basic.selection.AlgSelectionSort.scala.error
Erreur de compilation :
AlgSelectionSort:25: error: ')' expected but '}' found.
  }
  ^